// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slide /> should render correctly with transitions. 1`] = `
<Slide
  align="center center"
  presenterStyle={Object {}}
  style={Object {}}
  transition={
    Array [
      "slide",
      "spin",
    ]
  }
  viewerScaleMode={false}
>
  <VictoryAnimation
    data={
      Object {
        "transform": " translate3d(-100%, 0, 0) rotateY(-90deg)",
        "zIndex": 1,
      }
    }
    delay={0}
    duration={1000}
    easing="quadInOut"
  >
    <Styled(div)
      background="#eee"
      className="spectacle-slide"
      exportMode={undefined}
      innerRef={[Function]}
      printMode={undefined}
      style={
        Object {
          "transform": " translate3d(-100%, 0, 0) rotateY(-90deg)",
          "zIndex": 1,
        }
      }
      styles={
        Object {
          "base": Object {},
          "presenter": Object {},
        }
      }
    >
      <div
        className="spectacle-slide css-1w0uyvd"
        style={
          Object {
            "transform": " translate3d(-100%, 0, 0) rotateY(-90deg)",
            "zIndex": 1,
          }
        }
      >
        <Styled(div)
          align="center center"
          overviewMode={undefined}
        >
          <div
            className="css-13fut6c"
          >
            <Styled(div)
              className=" spectacle-content"
              height={undefined}
              innerRef={[Function]}
              margin={undefined}
              overviewMode={undefined}
              scale={1}
              styles={
                Object {
                  "context": Object {},
                }
              }
              width={undefined}
              zoom={0.6}
            >
              <div
                className=" spectacle-content css-1wqnfch"
                height={undefined}
                width={undefined}
              >
                <div>
                  Slide Content
                </div>
              </div>
            </Styled(div)>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </VictoryAnimation>
</Slide>
`;

exports[`<Slide /> should render correctly without transitions. 1`] = `
<Slide
  align="center center"
  presenterStyle={Object {}}
  style={Object {}}
  viewerScaleMode={false}
>
  <VictoryAnimation
    data={
      Object {
        "transform": " translate3d(0px, 0px, 0px)",
        "zIndex": 1,
      }
    }
    delay={0}
    duration={1000}
    easing="quadInOut"
  >
    <Styled(div)
      background="#eee"
      className="spectacle-slide"
      exportMode={undefined}
      innerRef={[Function]}
      printMode={undefined}
      style={
        Object {
          "transform": " translate3d(0px, 0px, 0px)",
          "zIndex": 1,
        }
      }
      styles={
        Object {
          "base": Object {},
          "presenter": Object {},
        }
      }
    >
      <div
        className="spectacle-slide css-1w0uyvd"
        style={
          Object {
            "transform": " translate3d(0px, 0px, 0px)",
            "zIndex": 1,
          }
        }
      >
        <Styled(div)
          align="center center"
          overviewMode={undefined}
        >
          <div
            className="css-13fut6c"
          >
            <Styled(div)
              className=" spectacle-content"
              height={undefined}
              innerRef={[Function]}
              margin={undefined}
              overviewMode={undefined}
              scale={1}
              styles={
                Object {
                  "context": Object {},
                }
              }
              width={undefined}
              zoom={0.6}
            >
              <div
                className=" spectacle-content css-1wqnfch"
                height={undefined}
                width={undefined}
              >
                <div>
                  Slide Content
                </div>
              </div>
            </Styled(div)>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </VictoryAnimation>
</Slide>
`;
